tests/security/taintedInputToParamAfterAssignment/output.txt
ERROR: TaintedData - input.hack:15:22 - Data from a URL query string found its way to a SQL query using path $_GET --array-fetch--> $_GET['user_id'] (input.hack:5:47) ----> call to A::getAppendedUserId (input.hack:5:38) ----> A::getAppendedUserId#1 (input.hack:9:46) ----> $user_id (input.hack:9:46) ----> composition (input.hack:10:16) ----> return (input.hack:10:16) ----> call to A::getAppendedUserId (input.hack:9:58) ----> call to A::deleteUser (input.hack:5:13) ----> A::deleteUser#2 (input.hack:13:67) ----> $userId (input.hack:13:67) ----> $userId2 (input.hack:14:9) ----> composition (input.hack:15:22) ----> call to AsyncMysqlConnection::query (input.hack:15:22) ----> AsyncMysqlConnection::query#1 (hhi_embedded_stdlib/builtins_async_mysql.hhi:181:14)